[Friends] Add friends-request routes
