# sources/api/routes/users/index.ts
@@ -4,12 +4,13 @@
 
 import { Router } from "express";
 import * as AsyncHandler from 'express-async-handler';
+import * as multer from "multer";
 
+import { loggedOnly } from "../../middleware/loggedOnly";
 import * as UserController from '../../controllers/UserController';
-import  { loggedOnly }     from "../../middleware/loggedOnly";
-import * as multer         from "multer";
+import * as FrienController from "../../controllers/FriendController";
 
-const image_upload: multer.Instance = multer({dest: "/tmp/user"});
+const image_upload: multer.Instance = multer({ dest: "/tmp/user" });
 
 const router = Router();
 
@@ -27,15 +28,28 @@ router.put('/:pseudo/timezone', AsyncHandler(loggedOnly), AsyncHandler(UserContr
 
 router.put('/:pseudo/providers/google', AsyncHandler(loggedOnly), AsyncHandler(UserController.importGoogleCredentials));
 
-router.put('/:pseudo/providers/facebook', AsyncHandler(loggedOnly), AsyncHandler(UserController.importFacebookCredentials));
+router.put(
+    '/:pseudo/providers/facebook',
+    AsyncHandler(loggedOnly),
+    AsyncHandler(UserController.importFacebookCredentials)
+);
 
 router.post('/:pseudo/upload-image',
     AsyncHandler(loggedOnly),
     AsyncHandler(image_upload.single("image")),
-    AsyncHandler(UserController.uploadUserImage));
+    AsyncHandler(UserController.uploadUserImage)
+);
 
 router.get('/:pseudo/image', AsyncHandler(loggedOnly), AsyncHandler(UserController.getUserImage));
 
 router.delete('/:pseudo', AsyncHandler(loggedOnly), AsyncHandler(UserController.deleteUser));
+
+
+router.post(
+    "/:pseudo/friend-invite",
+    AsyncHandler(loggedOnly),
+    AsyncHandler(FrienController.inviteFriend)
+);
+
 
 export default router;
