# sources/utils/types/FriendRequestStatus.ts
@@ -1,0 +1,6 @@
+export enum FriendRequestStatus {
+    SENT = "sent",
+    RECEIVED = "received",
+    CONFIRMED = "confirmed",
+    NONE = "none"
+}
